--- a/Primeiro Projetinho/index.html
+++ b/Primeiro Projetinho/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Tesla</title>
+</head>
+
+<body>
+    <img src="./img/logo (2).png" alt="Logo da tesla" class="logo">
+    <!-- Caixona -->
+    <ul class="lista">
+        <!-- ITEM 1 -->
+        <li class="todo">
+
+            <video src="./img/model-y.mp4" autoplay loop muted></video>
+
+            <div class="topo">
+                <h1>Model Y</h1>
+                <p class="sub">Parcelas a partir de 499 dólares</p>
+            </div>
+
+            <div class="pé">
+                <button onclick="ativarformulario()">Comprar Agora</button>
+                <a href="https://poki.com/br/g/crazy-cars"><button class="teste-drive">Faça o teste-Drive</button></a>
+                <p class="ultimo">Não garantimos seu veículo imediatamente, consulte o estoque.</p>
+            </div>
+        </li>
+        <!-- ITEM 2 -->
+        <li class="todo">
+
+            <img src="./img/model-3.png" class="img-tesla" alt="imagem model 3">
+
+            <div class="topo">
+                <h1>Model 3</h1>
+                <p class="sub">Compre agora o seu Tesla</p>
+            </div>
+            <div class="pé">
+                <p class="ultimo">Mais conforto e segurança</p>
+            </div>
+        </li>
+        <!-- ITEM 3 -->
+        <li class="todo">
+
+            <img src="./img/model-x.png" class="img-tesla" alt="imagem model x">
+
+            <div class="topo">
+                <h1>Model X</h1>
+                <p class="sub">Parcelar a partir de 499 dólares</p>
+            </div>
+            <div class="pé">
+                <p class="ultimo">Não perca essa chance</p>
+            </div>
+        </li>
+    </ul>
+    <!-- Parte do Formulario -->
+    <div class="formulario">
+        <button onclick="destivarformulario()">Fechar</button>
+        <script type="text/javascript" src="https://form.jotform.com/jsform/242055910345047"></script>"
+    </div>
+</body>
+<script src="scripts.js"></script>
+
+</html>
